fix link cutoff for IE8

--- a/app_storefront_core/cartridge/scss/_wishlist.scss
+++ b/app_storefront_core/cartridge/scss/_wishlist.scss
@@ -27,6 +27,7 @@
 		margin-right: 3.3333333%;
 		float: left;
 		a {
+			display: block;
 			word-break: break-all;
 		}
 	}
